client/main.css
body {
  font-family: Roboto, sans-serif;
  background-color: #1c1c1c;

  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
 
  padding: 0;
  margin: 0;
 
  font-size: 14px;
}

h1, h2, h3, th {
  font-family: 'Montserrat', sans-serif;;
}

a {
  color: #da8e35;
  text-decoration: none;
  font-weight: 500;
}

a:hover {
  color: #f1f1f1;
}

table {
  border-collapse: collapse;
  margin: 16px auto;
  width: 95%;
}

td {
  border-bottom: 1px solid #1c1c1c;
}

th {
  background-color: #1c1c1c;
}

tr:hover {
  background-color: #5d5d5d;
}

th, td {
  width: 20%;
  padding: 4px 8px;
  text-align: center;
}

th.name, td.name {
  width: 60%;
}

td.name {
  text-align: left;
  background-repeat: no-repeat;
  background-position: left;
  background-size: 75px auto;
  padding-left: 100px;
}

td.authorname {
  background: 0;
  padding-left: 8px;
}

td.number, th.number {
  width: 10%;
}

th.game-title {
  height: 4em;
  background-position: top left;
  background-repeat: no-repeat;
  background-size: auto;
}

#react-target {
  border: 1px solid #c1c1c1;
  border-radius: 5px 5px 0 0;
  border-bottom: 0;
  max-width: 900px;
  margin: 0 auto;
  min-height: 110%;
  background: rgb(76,76,76);
  color: #f1f1f1;
}

#header-banner {
  width: 100%;
  background-image: linear-gradient(to right, #1c1c1c 50%, transparent), url(https://staticdelivery.nexusmods.com/images/News/headers/14178_head_1576757784.png);
  background-size: contain;
  border: inherit;
  min-height: 50px;
  display: block;
  border-radius: 5px 5px 0 0;
  overflow: hidden;
  margin-bottom: 16px;
}

#header-content {
  padding: 0 16px;
}

#container {
  margin: 0 8px;
}

#footer {
  padding: 8px 16px;
  text-align: center;
  font-style: italic;
}

#profile {
  float: right;
  height: 100%;
  margin-right: 8px;
  padding: 4px 0;
  max-width: 30%;
  text-overflow: ellipsis;
  overflow: hidden;
  background: rgb(31,31,31,0.75);
  border: 1px solid rgb(31,31,31,0.75);
  border-radius: 5px;
}

#profile:hover {
  background-color: #1c1c1c;
  color: #da8e35;
}

.profile-button, .search-btn {
  max-width: 150px;
  background: transparent;
  border: 1px solid rgb(31,31,31,0.75);
  border-radius: 5px;
  color: #f1f1f1;
  padding: 8px;
  margin-right: 8px;
  width: 100px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.profile-button:hover, .profile-button:focus {
  outline: 0;
  color: #da8e35;
}

.profile-menu {
  position: absolute;
  display: block;
  z-index: 1;
  width: inherit;
  background-color: rgb(76,76,76);
}


.profile-menu-button {
  margin: 0px;
  background-color: #da8e35;
  text-transform: uppercase;
}

.profile-menu-button:hover, .search-btn:hover {
  background-color: #b4762c;
  border: 0;
  color: #f1f1f1;
}

.user-image {
  vertical-align: middle;
  text-align: center;
  width: 30px;
  height: 30px;
  background-color: rgb(255,255,255,0.5);
  background-size: cover;
  border: 2px solid #f1f1f1;
  border-radius: 25px;
  margin: 0 8px;
  float: right;
}

.user-image-inline, .user-image-table {
  float: none;
  margin: 0 auto;
}

.user-image-table {
  margin: 0 15px;
}

.tab-list {
  /* border-bottom: 1px solid #ccc; */
  padding: 0 4px;
}

.tab-list-item {
  display: inline-block;
  list-style: none;
  margin-bottom: -1px;
  margin-right: 4px;
  padding: 0.5rem 0.75rem;
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
  font-size: 1.15em;
}

.tab-list-item:hover {
  cursor: pointer;
  border-bottom: 3px solid #b4762c;
}

.tab-list-active {
  border-bottom: 3px solid #da8e35;
}

.tab-content {
  border-bottom: 1px solid #ccc;
  padding: 8px;
  margin-bottom: 16px;
  min-height: 500px;
}

.vote-page {
  text-align: center;
  line-height: 2em;
  background-position: top left;
  background-size: auto 600px;
  background-repeat: no-repeat;
  max-height: 1000px;
  overflow-y: auto;
  overflow-x: hidden;
  min-height: 500px;
}

.search-result {
  min-height: 50px;
  background-color: #1c1c1c;
  border: 1px solid #1c1c1c;
  margin: 4px auto;
  max-width: 75%;
  display: block;
  text-align: left;
  padding: 16px;
  background-repeat: no-repeat;
  background-position: right;
  background-size: auto 100px;
}

.search-info {
  max-width: 75%;
  padding: 0 16px;
  background-color: #1c1c1c;
  margin: 8px auto;
  border: 1px solid #1c1c1c;
  font-style: italic;
}

.search-result:hover {
  background-color: #1c1c1c;
  border: 1px solid #c1c1c1;
  box-shadow: rgb(76,76,76);
  cursor: pointer;
}

.game-selector {
  background-color: #fff;
  color: #000;
  text-align: left;
  padding: 0 16px;
  max-width: 50%;;
  margin: 0 auto;
}

.react-dropdown-select-option {
  color:rgb(76,76,76);
  border: 1px solid #5d5d5d;
  font-weight: 500;
  background-color: rgb(208,208,208);
  text-transform: uppercase;
}

.search-box {
  line-height: 3em;
  display: inline-block;
  flex-wrap: wrap;
  margin: 0 auto;
  min-width: 50%;
  margin-bottom: 8px;
}

.search-text {
  height: 2em;
  padding: 4px 16px;
  border: 0;
  min-width: 500px;
}

.search-btn {
  display: inline-block;
  background-color: #da8e35;
  color: #fff;
  font-weight: 500;
  text-transform: uppercase;
  border: 0;
  border-radius: 0;
  padding: 8px;
  margin: 0 8px;
}

.search-btn:disabled, .modinfo-btn:disabled {
  background-color: #5d5d5d;
  cursor: not-allowed;
  border: 1px dashed #c1c1c1;
  opacity: 0.5;
}

.modinfo-cancel {
  float: right;
  border: 0;
  background: transparent;
  border-radius: 5px;
}

.modinfo-btn {
  padding: 4px 8px;
  margin: 8px;
  background-color: #da8e35;
  border: 0;
  color: #fff;
  text-transform: uppercase;
  font-weight: 500;
}

.modinfo-btn-active {
  background-color: #fff;
  color: #da8e35;
  font-weight: 700;
}

.modinfo-btn:hover {
  background-color: #b4762c;
}

.modinfo-cancel:hover {
  background: #1c1c1c;
}

.modinfo-cancel:focus {
  outline:0;
}

.modinfo-column {
  float: left;
  width: 60%;
  padding: 8px;
}

.modinfo-column-author {
  width: 35%;
  border: 1px solid #c1c1c1;
  background-color: #1c1c1c;
  border-radius: 5px;
}

.modinfo-column img {
  width: 75%;
  border-radius: 5px;
}

.modinfo-row {
  margin: 0 auto;
  padding: 8px;
}

.modinfo-row::after {
  content: "";
  display: table;
  clear: both;
}

.vote-alert {
  width: 90%;
  display: block;
  background-color: #00c1ff;
  text-align: center;
  font-weight: 500;
  border: 1px solid #fff;
  margin: 0 auto;
}

.vote-alert-error {
  background-color: #dd0000;
}

/* Winners Tables */

.winners-table, .winners-table th {
  border-collapse: separate;
  border-spacing: 10px;
  background-color: transparent;
}

.winners-table a {
  font-weight: 600;
}

th.first, th.second, th.third {
  border-radius: 15px;
  padding: 20px;
  background-color: #1c1c1c;
  vertical-align: top;
}

th.first {
  border: 4px outset darkgoldenrod;
}

.user-image-large {
  height: 100px;
  width: 100px;
  float: none;
  border-radius: 60px;
  margin: 8px;
}

.mod-image-large {
  width: 200px;
  border-style: hidden;
}

.winners-container {
  padding: 16px 0;
  display: flex;
  width: 100%;
  margin: 0 auto;
}

.winners-container > div {
  background: #1c1c1c;
  display: inline-table;
  width: 300px;
  height: 250px;
  border: 1px solid #ff0000;
  border-radius: 15px;
  margin: 25px 5px;
  text-align: center;
}

.winners-container > div.firstPlace {
  margin: 0 auto;
  z-index: 5;
  height: 300px;
  width: 400px;
  border: 5px outset darkgoldenrod;
  font-size: 1.25em;
}

.winners-container > div.firstPlace:hover {
  box-shadow: 0 5px 15px #fdec6e;
  -moz-transition: all 0.3s ease-in;
  -o-transition: all 0.3s ease-in;
  -webkit-transition: all 0.3s ease-in;
  transition: all 0.3s ease-in;
}


.winners-container > div.secondPlace {
  border: 4px outset silver;
  margin-right: -75px;
}

.winners-container > div.thirdPlace {
  border: 4px outset #cd7f32;
  margin-left: -75px;
}

.winner-image-container {
  width: 200px;
  height: 115px;
  overflow: hidden;
  margin: 16px auto;
  border: 2px solid #c1c1c1;
}

.user-image-cont {
  border: none;
}

.winner-image-container > img { 
  width: 200px;
}

.winner-image-container > img.user-image { 
  width: 100px;
}

.winner-text {
  margin: 8px auto;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  width: 350px;
}

.winner-text > a {
  font-family: Montserrat, sans-serif;
  font-weight: 600;
}

.firstPlace, .secondPlace, .thirdPlace {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

